--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -13,39 +13,51 @@ jobs:
         abi: [arm64-v8a]
     
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
       with:
-        submodules: recursive
+        python-version: '3.10'
 
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '17'
         distribution: 'temurin'
+        java-version: '17'
 
     - name: Setup Android NDK
-      uses: android-actions/setup-ndk@v3
+      uses: nttld/setup-ndk@v1
+      id: setup-ndk
       with:
-        ndk-version: '25.2.9519653'
+        ndk-version: r25c
+        add-to-path: false
 
-    - name: Build Android
+    - name: Set up Android SDK
+      uses: android-actions/setup-android@v3
+
+    - name: Build Android arm64-v8a with 16KB support
       env:
-        _BUILD_CFG: ${{ matrix.abi }} out/android/${{ matrix.abi }}/Release
-        NDK_ROOT: ${{ steps.setup-ndk.outputs.ndk-path }}
+        ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
       run: |
-        chmod +x ./build.android
-        ./build.android
+        set -e
+        # Use the project's build script
+        python tools/build.py \
+          --android \
+          --android_abi=arm64-v8a \
+          --android_api=27 \
+          --android_home=$ANDROID_HOME \
+          --android_ndk_path=$ANDROID_NDK_HOME \
+          --config=Release \
+          --update \
+          --parallel \
+          --build
 
-    - name: Upload SO artifacts
+    - name: Upload build artifacts
+      if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: libortextensions-${{ matrix.abi }}
-        path: out/android/${{ matrix.abi }}/Release/**/*.so
-        if-no-files-found: error
-
-    - name: Upload AAR artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: onnxruntime-extensions-${{ matrix.abi }}.aar
-        path: out/android/${{ matrix.abi }}/Release/aar_out/*.aar
-        if-no-files-found: warn
+        name: android-arm64-libraries
+        path: build/Android/**/lib/*.so
+        retention-days: 7
